tests/valid/CoCoResolutionLegallyUsed.nestml
"""
CoCoResolutionLegallyUsed.nestml
################################


Description
+++++++++++

This model is used to test the use of the predefined ``resolution()`` function.


Copyright statement
+++++++++++++++++++

This file is part of NEST.

Copyright (C) 2004 The NEST Initiative

NEST is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 2 of the License, or
(at your option) any later version.

NEST is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with NEST.  If not, see <http://www.gnu.org/licenses/>.
"""
model resolution_legally_used_synapse:
    parameters:
        d ms = 1 ms  @nest::delay
        a ms = resolution()

    internals:
        b ms = resolution()

    state:
        q ms = resolution()

    input:
        pre_spikes <- spike

    onReceive(pre_spikes):
        x ms = resolution()

    update:
        z ms = resolution()
