tests/invalid/CoCoInputPortsIllegal.nestml
"""
CoCoInputPortsIllegal.nestml
############################


Description
+++++++++++

This test is used to test the declaration of both vectorized and non-vectorized input ports.


Copyright statement
+++++++++++++++++++

This file is part of NEST.

Copyright (C) 2004 The NEST Initiative

NEST is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 2 of the License, or
(at your option) any later version.

NEST is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with NEST.  If not, see <http://www.gnu.org/licenses/>.
"""
model input_ports_illegal_neuron:
    state:
        bar pA = 0 pA
        foo_spikes pA = 0 pA
        my_spikes_ip pA = 0 pA

    input:
        AMPA_spikes <- spike
        GABA_spikes <- spike
        NMDA_spikes <- spike
        foo[2] <- spike
        my_spikes[3] <- spike
        my_spikes2[3] <- spike
        I_stim pA <- continuous

    update:
        bar += (NMDA_spikes + 2 * AMPA_spikes - 3 * GABA_spikes) * (pA * s)
        foo_spikes += (foo[0] + 5.5 * foo[1]) * (pA * s)
        my_spikes_ip += (my_spikes[0] + my_spikes[1] - my_spikes2[1]) * (pA * s)
